@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/apache">ASL</license>
  <notes>
+* [jan] Never send autoreplies again when setting zero vacation days in Procmail or Maildrop backends (Bug #14549).
 * [jan] Don&apos;t split sieve body tests on commas (Bug #14546).
  </notes>
  <contents>
@@ -1704,6 +1705,7 @@
    <date>2016-12-16</date>
    <license uri="http://www.horde.org/licenses/apache">ASL</license>
    <notes>
+* [jan] Never send autoreplies again when setting zero vacation days in Procmail or Maildrop backends (Bug #14549).
 * [jan] Don&apos;t split sieve body tests on commas (Bug #14546).
    </notes>
   </release>
